@@ -19,12 +19,11 @@
   %table{ :width => 500, :cellpadding => 0, :cellspacing => 0 }
     - fields_for(@account) do |a|
       = a.hidden_field :user_id
-      = a.hidden_field :access
       %tr
         %td{ :valign => :top }
           .label
             Account
-            %span#account_selector
+            %span#account_selector>
           = collection_select :account, :id, @accounts, :id, :name, { :selected => @account.id || 0 }, { :style => "width:330px; display:none;" }
           = a.text_field :name, :style => "width:324px; display:none;"
         %td= spacer
