@@ -92,18 +92,40 @@ var crm = {
     }
   },
 
+  // Hide accounts dropdown and show create new account edit field instead.
   //----------------------------------------------------------------------------
-  create_account: function() {
-    $("account_selector").update("(create new or <a href='#' onclick='crm.select_account(); return false;'>select existing</a>):");
-    $("account_id").hide();  $("account_id").disable();
-    $("account_name").enable();  $("account_name").show();  $("account_name").focus();
+  create_account: function(and_focus) {
+    $("account_selector").update(" (create new or <a href='#' onclick='crm.select_account(1); return false;'>select existing</a>):");
+    $("account_id").hide();
+    $("account_id").disable();
+    $("account_name").enable();
+    $("account_name").show();
+    if (and_focus) {
+      $("account_name").focus();
+    }
   },
 
+  // Hide create account edit field and show accounts dropdown instead.
   //----------------------------------------------------------------------------
-  select_account: function() {
-    $("account_selector").update("(<a href='#' onclick='crm.create_account(); return false;'>create new</a> or select existing):");
-    $("account_name").hide();  $("account_name").disable();
-    $("account_id").enable();  $("account_id").show();  $("account_id").focus();
+  select_account: function(and_focus) {
+    $("account_selector").update(" (<a href='#' onclick='crm.create_account(1); return false;'>create new</a> or select existing):");
+    $("account_name").hide();
+    $("account_name").disable();
+    $("account_id").enable();
+    $("account_id").show();
+    if (and_focus) {
+      $("account_id").focus();
+    }
+  },
+
+  // Show accounts dropdown and disable it to prevent changing the account.
+  //----------------------------------------------------------------------------
+  select_existing_account: function() {
+    $("account_selector").update(":");
+    $("account_name").hide();
+    $("account_name").disable();
+    $("account_id").disable();
+    $("account_id").show();
   },
 
   //----------------------------------------------------------------------------
