@@ -4,6 +4,10 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Fri, Mar 20, 2009
+---------------------------------------------------------------------
+- More work on editing a contact.
+
 Wed, Mar 18, 2009
 ---------------------------------------------------------------------
 - Updated view specs to use Factories, 100% pass.
